--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html class="notranslate" translate="no">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google" content="notranslate" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
