--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="google" content="notranslate" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <title>TutoriaLLM</title>
+    <meta name="theme-color" content="#e5e7eb">
+
     <style>
       #loading {
         position: fixed;
