--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -119,6 +119,6 @@
   <body>
     <div id="loading">Loading<div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></div>
     <div id="root"></div>
-    <script type="module" src="/src/client/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
